# xhermes

./: .git-blame-ignore-revs  .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
.github/: dependabot.yml
.github/workflows/: pub_to_pypi.yml  pythonpackage.yml  ruff.yaml
examples/: 1d-postprocessing.ipynb  2d-selection.ipynb
tests/: test-selectors.py  test_decomposition_check.py  test_selectors.py  test_slice_poloidal.py  test_slice_poloidal_reference.json  test_slice_radial_reference.json
xhermes/: __init__.py  accessors.py  load.py  plotting.py  selectors.py  utils.py
